# gitstar-policy

./: Config.hs  README.md  gitstar-policy.cabal  gitstar.cabal
Gitstar/: Models.hs  Policy.hs  Repo.hs
Gitstar/Repo/: Types.hs
