Name:           gitstar-policy
Version:        0.1.2
build-type:     Simple
License:        GPL-2
License-File:   LICENSE
Author:         HAils team
Maintainer:     Hails team <hails at scs.stanford dot edu>
Stability:      experimental
Synopsis:       Git project management and repository access
Category:       Web
Cabal-Version:  >= 1.6

Description:
        This module exports a library for accessing git projects and
        reposiroty objects (i.e., the gitstar model).

Library
  Build-Depends: base >= 4.5 && < 5,
                 binary >= 0.5 && < 0.6,
                 bson >= 0.2 && < 0.3,
                 containers >= 0.4.2 && < 0.5,
                 cryptohash >= 0.7.5,
                 bytestring >= 0.9 && < 1,
                 base64-bytestring >= 0.1.1.2 && < 0.2,
                 hex,
                 text,
                 lio >= 0.9 && < 1.0,
                 hails >= 0.9 && < 1.0

  ghc-options: -Wall -fno-warn-orphans -fno-warn-name-shadowing
--  Extensions: Safe

  Exposed-modules:
    Gitstar.Policy
    Gitstar.Models
    Gitstar.Repo
    Gitstar.Repo.Types
  Other-modules:
    Config
